--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             When workers know that they’ll get instant access to their pay, you’ll stand out in the job market.
 
                             <h2>Improve employee retention significantly</h2>
-                            Offering Tipease shows your workforce that you care — leading to employees staying with your company longer.
+                            Offering Tipsease shows your workforce that you care — leading to employees staying with your company longer.
 
                             <h2>Lower workforce absenteeism</h2>
                             Create a workplace that inspires productivity and a motivation to get started.
