Reset the website

--- a/index.html
+++ b/index.html
@@ -1,117 +1,73 @@
-﻿<!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Tipsease</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+﻿<!doctype html>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
 
-				<!-- Main -->
-					<section id="main">
-                        <header>
-                            <h1>Tipsease</h1>
-                        </header>
-						<h2>Signup</h2>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<input type="text" name="name" id="name" placeholder="Full Name" />
-								</div>
-								<div class="field">
-									<input type="email" name="email" id="email" placeholder="Email" />
-								</div>
-								<div class="field">
-									<select name="department" id="department">
-										<option value="sales">Sales</option>
-										<option value="customer">Customer</option>
-									</select>
-								</div>
-                                <div class="field">
-                                    <!--<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>-->
-                                    <input type="password" name="password" id="password" placeholder="Password" />
-                                </div>
-                                <div class="field">
-                                    <input type="password" name="password" id="password_confirm" placeholder="Confirm Password" />
-                                </div>
-								<div class="field">
-									<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
-								</div>
-								<div class="field">
-									<label>But are you a robot?</label>
-									<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
-									<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
-								</div>
-							</div>
-							<ul class="actions special">
-								<li><a href="#" class="button">Get Started</a></li>
-							</ul>
-						</form>
-                        <p>
-                            <span class="avatar"><img src="images/easypaisa.jpg" alt="" /></span>
+    <title>Tipsease</title>
 
-                            <h2>Turn every day into payday</h2>
-                            When you put your employees in control of their financial well-being, you'll boost job applicants and cut turnover.
+    <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 
-                            The solution to succeeding in the toughest labor market
+    <div class="container home">
+        <div class"nav-container">
+            <div class="logo">
+                <h1>Tipsease</h1>
+            </div>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About US</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+                <a href="#">Sign In</a>
+            </nav>
+        </div>
 
-                            <h2>Immediately increase job applicants</h2>
-                            When workers know that they’ll get instant access to their pay, you’ll stand out in the job market.
+        <header class="intro">
+            <img class="intro-image" src="images/intro.jpg" />
 
-                            <h2>Improve employee retention significantly</h2>
-                            Offering Tipsease shows your workforce that you care — leading to employees staying with your company longer.
 
-                            <h2>Lower workforce absenteeism</h2>
-                            Create a workplace that inspires productivity and a motivation to get started.
 
-                            <h1>How it Works</h1>
-                            Employees get access to their pay minutes after each shift
+            <h2>Tincidunt.</h2>
 
-                            <h2>Tipsease is the only pay platform that gives your employees control over their pay immediately after each shift—at no cost to them. With Tipsease, you help your workforce kick the stress of daily finances so they can focus on the job at hand.</h2>
-                            <span class="avatar"><img src="images/debit-card.png" alt="" /></span>
-                            <h1>Your Employees Can</h1>
-                            Get paid after every shift with our industry-leading mobile app
-                            Pay for items using their Tipsease card at millions of locations around the world where Visa or Mastercard are accepted
-                            Access over 33,000 no-fee ATMs
-                            Transfer funds free of charge directly to their bank accounts
+            <p>Vivamus accumsan libero vel aliquet dictum. Quisque vehicula molestie ultricies. Sed commodo magna nec erat malesuada lobortis. Praesent in massa vitae diam pulvinar vestibulum. Morbi eget nibh ligula. Quisque sed ullamcorper ante. Quisque dignissim tempus egestas. </p>
 
-                        </p>
-						<hr />
-						<footer>
-							<!--<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
-							</ul-->
-						</footer>
-					</section>
+        </header>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; C.J. Stryker</li></li>
-						</ul>
-					</footer>
+        <section class="payment-image">
+            <img src="images/debit-card.png" class="debit-card" alt="Pay With Your Card!">
+            <img class="pay-image" src="images/easypaisa.jpg" />
+            <img class="first-money-image" src="images/money.png" />
+        </section>
 
-			</div>
+        <section class="visit-us">
 
-		<!-- Scripts -->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
+            <h3>Visit Us!</h3>
+            <p>Vivamus ut venenatis diam. Quisque sit amet euismod augue, et pulvinar mauris. Suspendisse eget lorem orci. Pellentesque non tempus libero. Morbi congue sed dui ac convallis. Sed enim ex, euismod ut urna id, aliquam vulputate purus. Nam ut massa nec dui pulvinar porttitor in quis enim. Vivamus quis finibus sem.</p>
 
-	</body>
+
+
+        </section>
+        <section class="sign-up">
+            <div class="sign-up-text">
+                <h3>Join Us!</h3>
+
+                <p>Sed non risus tempor, sodales sapien in, dictum urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla consequat nulla dictum purus pellentesque, a cursus nisl suscipit. Phasellus tellus odio, tempus quis sodales id, finibus et neque. </p>
+
+                <div class="btn">
+                    Sign Up
+                </div>
+            </div>
+            <!--<img class="money-image" src="images/money.png" />-->
+        </section>
+
+        <footer>
+            <p>Copyright Tipsease 2019</p>
+        </footer>
+
+    </div>
+</body>
 </html>
