--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h1>Tipsease</h1>
             </div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About US</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About US</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
                 <a href="#">Sign In</a>
